--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <div id="mobile-back-button" draggable="true">
                 <i class="bi bi-x-circle-fill"></i>
               </div>
-              <iframe class="game-iframe" id="game-area" src="https://lolygames.github.io/funny-shooter-2/" width="480"
+              <iframe class="game-iframe" id="game-area" src="https://htmlxm.github.io/h9/vex-4/" width="480"
                 height="800" scrolling="none" frameborder="0" allowfullscreen=""></iframe>
             </div>
           </div>
