--- a/go/traffic-rush.html
+++ b/go/traffic-rush.html
@@ -123,7 +123,7 @@
 <div draggable="true" id="mobile-back-button">
 <i class="bi bi-x-circle-fill"></i>
 </div>
-<iframe allowfullscreen="" class="game-iframe" frameborder="0" height="800" id="game-area" scrolling="none" src="https://just-fall.github.io/o99/traffic-rush/" width="480"></iframe>
+<iframe allowfullscreen="" class="game-iframe" frameborder="0" height="800" id="game-area" scrolling="none" src="https://games.poki.com/458768/78cbbd61-793d-4314-8bdd-c4af724dca44?tag=pg-56849ad8b012f40abfe66a363007cc7c754f59ae&site_id=3&iso_lang=en&country=PK&poki_url=https://poki.com/en/g/traffic-rush&hoist=yes&nonPersonalized=n&cloudsavegames=n&familyFriendly=n&categories=9,78,869&experiment=test-959a0db8&special_condition=landing" width="480"></iframe>
 </div>
 </div>
 </div>
